# tracing_otlp

./: Cargo.toml
src/: main.rs  otl.rs
