[package]
name = "tracing_otlp"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.19.0", default-features = false, features = ["trace", "rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.12.0", default-features = false, features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry_sdk = "0.19.0"
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-opentelemetry = { version = "0.19.0", default-features = false, features = ["tracing-log", "metrics"] }
tracing-subscriber = "0.3.17"

[dependencies.tokio]
version = "1"
features = ["full"]
